--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@stripe/stripe-js": "^1.54.1",
     "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.3.0",
     "rxjs": "~7.8.0",
